alignment fixes

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -10,6 +10,8 @@ main {
   height: 100%;
   width: 100%;
   background: #f5f5f5;
+  position: absolute;
+  overflow-y: auto;
 }
 
 *,
